--- a/src/app/entities/bank/components/bank-edit-modal/bank-edit-modal.component.scss
+++ b/src/app/entities/bank/components/bank-edit-modal/bank-edit-modal.component.scss
@@ -6,3 +6,11 @@
   color: var(--primary) !important;
   border: #90a4ae;
 }
+
+.details {
+  width: 50%;
+}
+
+.flex-column {
+  flex-direction: column;
+}
