--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -63,6 +63,7 @@
   <!--   main router-outlet-->
   <mat-sidenav-content>
     <div class="content mat-elevation-z1">
+      <app-alert-messages></app-alert-messages>
       <router-outlet></router-outlet>
             <ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="medium" color="#229489" type="ball-fussion"
                          [fullScreen]="true">
