--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,7 +15,10 @@ body {
   --light-green: #a59f83;
   --light-blue: #a19bf2;
   --primary: #607d8b;
-  --dark-primary: #455a64
+  --dark-primary: #455a64;
+  --status-success-color: #36B036FF;
+  --status-warning-color: #faa236;
+  --cranberry: #bb2525;
 }
 
 /* You can add global styles to this file, and also import other style files */
