--- a/src/app/entities/info/info.component.html
+++ b/src/app/entities/info/info.component.html
@@ -1,7 +1,34 @@
 <div class="h-100 login-background">
   <div class="home-title h-100 opacity-100 d-flex flex-column">
-    <div class="background-color"> {{'user.username' | translate}} : {{user.username}}</div>
-    <div class="background-color"> {{'user.email' | translate}} : {{user.email}}</div>
-    <div class="background-color"> {{'user.role' | translate}} : {{user.role | translate}}</div>
+    <div class="background-color"> {{'user.username' | translate}} : <strong>{{user.username}}</strong></div>
+    <div class="background-color"> {{'user.email' | translate}} : <strong>{{user.email}}</strong></div>
+    <div class="background-color"> {{'user.role' | translate}} : <strong>{{user.role | translate}}</strong></div>
+    <div *ngIf="user.role === UserRoles.ROLE_ADMIN">
+      <div class="background-color">
+
+        <table class="table">
+          <thead>
+          <tr>
+            <th scope="col">{{'admin.id' | translate}}</th>
+            <th scope="col">{{'admin.username' | translate}}</th>
+            <th scope="col">{{'admin.email' | translate}}</th>
+            <th scope="col">{{'admin.role' | translate}}</th>
+            <th scope="col">{{'admin.approve' | translate}}</th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr *ngFor="let userTmp of usersToApprove">
+            <th scope="row">{{userTmp.id}}</th>
+            <td>{{userTmp.username}}</td>
+            <td>{{userTmp.email}}</td>
+            <td>{{userTmp.role | translate}}</td>
+            <td>
+              <button mat-raised-button color="primary" (click)="approve(userTmp)"> {{'admin.approve' | translate}}</button>
+            </td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
   </div>
 </div>
