--- a/src/app/shared/components/alert-messages/alert-messages.component.scss
+++ b/src/app/shared/components/alert-messages/alert-messages.component.scss
@@ -3,7 +3,7 @@
   position: fixed;
   bottom: 45px;
   right: 20px;
-  z-index: 99991;
+  z-index: 999!important;
 }
 
 /* ==========================================================================
