--- a/src/app/entities/client/components/client-edit-modal/client-edit-modal.component.html
+++ b/src/app/entities/client/components/client-edit-modal/client-edit-modal.component.html
@@ -34,15 +34,23 @@
             {{'form.required' | translate}}
           </mat-error>
         </mat-form-field>
-        <mat-form-field>
-          <mat-label>{{'client.can_get_loan' | translate}}</mat-label>
-          <input autofocus type="text" matInput formControlName="can_get_loan">
-        </mat-form-field>
+
+
+        <mat-label>{{'client.can_get_loan' | translate}}</mat-label>
+        <mat-button-toggle-group class="w-100 mt-1 mb-3" name="fontStyle" aria-label="Font Style"
+                                 formControlName="can_get_loan">
+          <mat-button-toggle class="w-50" value="0">
+            {{'no' | translate}}
+          </mat-button-toggle>
+          <mat-button-toggle class="w-50" value="1">
+            {{'yes' | translate}}
+          </mat-button-toggle>
+        </mat-button-toggle-group>
       </form>
     </div>
   </form>
 </div>
 <div class="modal-footer justify-content-between">
   <button mat-stroked-button color="warn" (click)="onDismiss()">{{'button.cancel' | translate}}</button>
-  <button mat-raised-button color="primary" (click)="saveClient()">{{'button.save' | translate}}</button>
+  <button mat-raised-button color="primary" (click)="saveClient()" [disabled]="clientForm.invalid">{{'button.save' | translate}}</button>
 </div>
