--- a/src/app/layouts/navbar/navbar.component.html
+++ b/src/app/layouts/navbar/navbar.component.html
@@ -1,5 +1,6 @@
 <div class="d-flex">
+  <button class="mt-1 me-2" mat-stroked-button (click)="start()">START</button>
   <div class="angular-logo" (click)="redirectTo()"></div>
-  <button class="w-25" mat-raised-button color="accent" (click)="internationalization()">{{'internationalization' | translate}}</button>
+  <button class="w-25 mt-1" mat-raised-button color="accent" (click)="internationalization()">{{'internationalization' | translate}}</button>
 </div>
 
